# guitar_exercises

./: .coveragerc  .mypy.ini  .pylintrc  CHANGELOG.md  LICENSE.md  README.md  cookiecutter-replay.json  environment.yml  noxfile.py  requirements-dev.txt  setup.cfg  setup.py
.circleci/: config.yml
scripts/: generate_pip_deps_from_conda.py
src/demo/: cli.py  core.py  utils.py
src/demo/data/: sample.csv
src/demo/v18/: domains.py  variables.py
src/guitar_exercises/: __init__.py  cli.py  version.py
test/core/: test_dummy.py
test/demo/: test_cli.py  test_noxfile.py
