[metadata]
name = guitar_exercises
author = David Li-Bland
author_email = unlearn-devs+guitar_exercises@unlearn.ai
license = Proprietary
version = 0.0.0.dev0+local
license_file = LICENSE.md
long_description = file: README.md, CHANGELOG.md, LICENSE.md
url = https://github.com/davidlibland/guitar_exercises
classifiers =
    Development Status :: 3 - Alpha
    License :: Other/Proprietary License
    Intended Audience :: Science/Research

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
# TODO unlearn: add package requirements here
    typing-extensions>=4.8
zip_safe = False

[options.packages.find]
include =
    guitar_exercises*
    # TODO unlearn: remove the following package
    demo*
where = src

[options.package_data]
# for the demo package include csv files
# TODO unlearn: remove the demo block if you're not packaging csv's
demo*=
    *.csv
# for any package, mark that we're exporting typehints
* =
    py.typed

[options.entry_points]
# See https://setuptools.readthedocs.io/en/latest/setuptools.html#automatic-script-creation
# and https://stackoverflow.com/a/48891252
console_scripts =
    # TODO unlearn: remove the these extras
    export-dm = demo.cli:export_dm
    print-sample = demo.cli:print_sample

[options.extras_require]
demo =
    click>=8.1
    numpy>=1.25
    pandas>=1.5.3
    pydantic>=1.10.9,<2.5
    # test renames from DP-222
    tables>=3.4.2
dev =
    nox>=2019.8.20
    packaging>=23.1
    dunamai>=1.0.0
    mypy
    black~=23.3
    isort>=5.12.0
    pylint>=3.0.2
    pylint-junit>=0.2.0
    pytest>=7.4.1
    pytest-cov>=2.8.1
    hypothesis[numpy]>=5.6.0
    twine
    build
